Added HTML tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal site</title>
     <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
 </head>
 <body>
@@ -12,10 +12,64 @@
         <h1>Team Template</h1>
     </header>
     <main>
-
+        <div>
+            <h2>Biography</h2>
+            <img src="img/avatar-de-un-icono-neón-la-muchacha-del-ángel-elementos-y-sistema-demonio-simple-para-las-p-ginas-web-dise-o-app-m-vil-145511610.jpg" alt="My photo">
+            <p>Hello! My name is Artem. It`s <a href="https://github.com/ArtemHolikov" target="_blank"> my GitHub account.</a> You can see here my projects</p>
+        </div>
+        <div>
+            <h2>How can you connect with me?</h2>
+            <p>To connect use this form. I will anwer you</p>
+            <form action="#">
+                <input id="name" type="text" placeholder="Your Name" required>
+                <input type="email" name="mail" id="mail" placeholder="Email" required> <br> <br>
+                <span>Gender:</span> <br>
+                <label for="woman">
+                    <input type="radio" name="man-woman" id="woman" value="woman"> Woman
+                </label>
+                <label for="man">
+                    <input type="radio" name="man-woman" id="man" value="man"> Man
+                </label> <br> <br>
+                <span>Methods of connect:</span> <br>
+                <label for="email">
+                    <input type="checkbox" name="methods" id="email" value="email"> Email
+                </label>
+                <label for="call">
+                    <input type="checkbox" name="methods" id="call" value="call"> Call
+                </label>
+                <label for="sms">
+                    <input type="checkbox" name="methods" id="sms" value="sms"> SMS
+                </label> <br> <br>
+                <button type="submit">Submit</button>
+                <button type="reset">Reset</button>
+            </form>
+        </div>
     </main>
     <footer>
-
+        <p>In the end, which coclusion I can make.</p>
+        <ul>
+            <li>
+                <p>SoftServe is amazing company</p>
+            </li>
+            <li>
+                <p>Our mentor is very funny and great man</p>
+            </li>
+            <li>
+                <p>I hope I will work in this company! It`s my dream</p>
+            </li>
+        </ul>
+        <p>My plan:</p>
+        <ol>
+            <li>
+                <p>Hardworking on course</p>
+            </li>
+            <li>
+                <p>Teach all materials using other literature</p> 
+            </li>
+            <li>
+                <p>Pass the exams and go ahead to my dream</p>
+            </li>
+        </ol>
     </footer>
 </body>
 </html>
