--- a/index.html
+++ b/index.html
@@ -4,72 +4,146 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal site</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
+    <title>Burger Food Truck</title>
+    <link rel="shortcut icon" href="img/6214c261839f310023ddb6f3.svg" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <h1>Team Template</h1>
+    <header class="header">
+        <div class="header__contacts">
+            <p class="header__address">Los Angeles Gournadi, 1230 Bariasl</p>
+            <a href="mailto:freddy.burgers@email.com" class="header__email">freddy.burgers@email.com</a>
+            <p>Hours: 9:00 AM - 5:00 PM</p>
+        </div>
+        <nav class="header__nav" style="background-color: aquamarine;">
+            <a href="" class="header__logo-container">
+                <img src="img/Logo1.svg" width="252" class="header__logo" alt="Burger Logo">
+            </a>
+            <div class="header__menu">
+                <a href="about" class="header__menu-item">About us</a>
+                <a href="menu" class="header__menu-item">Menu</a>
+                <a href="catering" class="header__menu-item">Catering</a>
+                <a href="contacts" class="header__menu-item">Contacts</a>
+            </div>
+            <div class="header__icons">
+                <a class="header__icons-item">
+                    <img href ="img/facebook.svg"></img>
+                </a>
+                <a class="header__icons-item">
+                    <img href ="img/facebook.svg"></img>
+                </a>
+                <a class="header__icons-item">
+                    <img href ="img/facebook.svg"></img>
+                </a>
+            </div>
+        </nav>
+        <div class="header__banner">
+            <h1 class="header__title">FREDDY BURGERS</h1>
+            <p class="header__slogan">YOU HAVE A PARTY — WE HAVE TASTY BURGERS!</p>
+            <p class="header__text">Look out for our food truck on the streets of Los Angeles, order delivery or catering, and enjoy the taste of juicy burgers!</p>
+            <div class="header__order">
+                <a href="#" class="header__order-button button">Order now</a>
+                <div class="header__call-now">
+                    <img src="img/phone (1) 1.svg" alt="Phone">
+                    <div class="header__phone">
+                        <h4 class="header__phone-text">Call us</h4>
+                        <a href="tel:+ 1 (234) 567 89 00">+ 1 (234) 567 89 00</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <main>
-        <div>
-            <h2>Biography</h2>
-            <img src="img/avatar-de-un-icono-neón-la-muchacha-del-ángel-elementos-y-sistema-demonio-simple-para-las-p-ginas-web-dise-o-app-m-vil-145511610.jpg" alt="My photo">
-            <p>Hello! My name is Artem. It`s <a href="https://github.com/ArtemHolikov" target="_blank"> my GitHub account.</a> You can see here my projects</p>
-        </div>
-        <div>
-            <h2>How can you connect with me?</h2>
-            <p>To connect use this form. I will anwer you</p>
-            <form action="#">
-                <input id="name" type="text" placeholder="Your Name" required>
-                <input type="email" name="mail" id="mail" placeholder="Email" required> <br> <br>
-                <span>Gender:</span> <br>
-                <label for="woman">
-                    <input type="radio" name="man-woman" id="woman" value="woman"> Woman
-                </label>
-                <label for="man">
-                    <input type="radio" name="man-woman" id="man" value="man"> Man
-                </label> <br> <br>
-                <span>Methods of connect:</span> <br>
-                <label for="email">
-                    <input type="checkbox" name="methods" id="email" value="email"> Email
-                </label>
-                <label for="call">
-                    <input type="checkbox" name="methods" id="call" value="call"> Call
-                </label>
-                <label for="sms">
-                    <input type="checkbox" name="methods" id="sms" value="sms"> SMS
-                </label> <br> <br>
-                <button type="submit">Submit</button>
-                <button type="reset">Reset</button>
+        <section class="courses">
+            <h2 class="courses__title">
+                Courses
+            </h2>
+            <p class="courses__block-title">
+                Make coffee like a pro
+            </p>
+            <div class="divider">
+
+            </div>
+            <p class="courses__subtitle">
+                Lorem ipsum dolor sit amet consectetur 
+            </p>
+            <div class="courses__carousel carousel">
+                <article class="carousel__slide slide">
+                    <img width="200" src="img/courses-carousel-latte.png" alt="Latte">
+                    <h3 class="">Latte Art Course</h3>
+                    <div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                    </div>
+                    <p>Turn each coffee you make into a masterpiece with our Latte Art Course. You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much more complicated designs.</p>
+                    <a href="#" class="slide__link">Sign up</a>
+                </article>
+                <article class="carousel__slide slide">
+                    <img width="200" src="img/courses-carousel-latte.png" alt="Latte">
+                    <h3 class="">Latte Art Course</h3>
+                    <div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                    </div>
+                    <p>Turn each coffee you make into a masterpiece with our Latte Art Course. You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much more complicated designs.</p>
+                    <a href="#" class="slide__link">Sign up</a>
+                </article>
+                <article class="carousel__slide slide">
+                    <img width="200" src="img/courses-carousel-latte.png" alt="Latte">
+                    <h3 class="">Latte Art Course</h3>
+                    <div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                        <div>
+                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
+                            <span>5 days</span>
+                        </div>
+                    </div>
+                    <p>Turn each coffee you make into a masterpiece with our Latte Art Course. You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much more complicated designs.</p>
+                    <a href="#" class="slide__link">Sign up</a>
+                </article>
+            </div>
+        </section>
+        <section class="contacts">
+            <div class="contacts__details">
+
+            </div>
+            <form action="#" method="post" class="contacts__form">
+                <input type="text" name="full-name" placeholder="Enter your fullname*" required>
+                <input type="tel" name="phone" placeholder="Enter your phone number*" required>
+                <input type="email" name="email" placeholder="Enter your email*" required>
+                <textarea name="message" placeholder="Enter your message" cols="30" rows="10"></textarea>
+                <input type="submit" value="Request a Quote">
             </form>
-        </div>
+        </section>
     </main>
-    <footer>
-        <p>In the end, which coclusion I can make.</p>
-        <ul>
-            <li>
-                <p>SoftServe is amazing company</p>
-            </li>
-            <li>
-                <p>Our mentor is very funny and great man</p>
-            </li>
-            <li>
-                <p>I hope I will work in this company! It`s my dream</p>
-            </li>
-        </ul>
-        <p>My plan:</p>
-        <ol>
-            <li>
-                <p>Hardworking on course</p>
-            </li>
-            <li>
-                <p>Teach all materials using other literature</p> 
-            </li>
-            <li>
-                <p>Pass the exams and go ahead to my dream</p>
-            </li>
-        </ol>
+    <footer class="footer">
+        
     </footer>
 </body>
 </html>
