Added href to a tag

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p>Hours: 9:00 AM - 5:00 PM</p>
         </div>
         <nav class="header__nav" style="background-color: aquamarine;">
-            <a href="" class="header__logo-container">
+            <a href="#" class="header__logo-container">
                 <img src="img/Logo1.svg" width="252" class="header__logo" alt="Burger Logo">
             </a>
             <div class="header__menu">
@@ -25,13 +25,13 @@
                 <a href="contacts" class="header__menu-item">Contacts</a>
             </div>
             <div class="header__icons">
-                <a class="header__icons-item">
+                <a href="#" class="header__icons-item">
                     <img href ="img/facebook.svg"></img>
                 </a>
-                <a class="header__icons-item">
+                <a href="#" class="header__icons-item">
                     <img href ="img/facebook.svg"></img>
                 </a>
-                <a class="header__icons-item">
+                <a href="#" class="header__icons-item">
                     <img href ="img/facebook.svg"></img>
                 </a>
             </div>
