--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             </div>
             <div class="header__icons">
                 <a href="#" class="header__icons-item">
-                    <img src ="img/facebook.svg"></img>
+                    <img src ="img/facebook.svg" alt="facebook"></img>
                 </a>
                 <a href="#" class="header__icons-item">
-                    <img src ="img/facebook.svg"></img>
+                    <img src ="img/facebook.svg" alt="facebook"></img>
                 </a>
                 <a href="#" class="header__icons-item">
-                    <img src ="img/facebook.svg"></img>
+                    <img src ="img/facebook.svg" alt="facebook"></img>
                 </a>
             </div>
         </nav>
