changed href of a tag

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <img src="img/phone (1) 1.svg" alt="Phone">
                     <div class="header__phone">
                         <h4 class="header__phone-text">Call us</h4>
-                        <a href="tel:+ 1 (234) 567 89 00">+ 1 (234) 567 89 00</a>
+                        <a href="tel:+12345678900">+ 1 (234) 567 89 00</a>
                     </div>
                 </div>
             </div>
