changed name of photo

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="header__order">
                 <a href="#" class="header__order-button button">Order now</a>
                 <div class="header__call-now">
-                    <img src="img/phone (1) 1.svg" alt="Phone">
+                    <img src="img/phone.svg" alt="Phone">
                     <div class="header__phone">
                         <h4 class="header__phone-text">Call us</h4>
                         <a href="tel:+12345678900">+ 1 (234) 567 89 00</a>
