changed href of a tags in header__menu

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <img src="img/Logo1.svg" width="252" class="header__logo" alt="Burger Logo">
             </a>
             <div class="header__menu">
-                <a href="about" class="header__menu-item">About us</a>
-                <a href="menu" class="header__menu-item">Menu</a>
-                <a href="catering" class="header__menu-item">Catering</a>
-                <a href="contacts" class="header__menu-item">Contacts</a>
+                <a href="#" class="header__menu-item">About us</a>
+                <a href="#" class="header__menu-item">Menu</a>
+                <a href="#" class="header__menu-item">Catering</a>
+                <a href="#" class="header__menu-item">Contacts</a>
             </div>
             <div class="header__icons">
                 <a href="#" class="header__icons-item">
