--- a/index.html
+++ b/index.html
@@ -1,149 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Food Truck</title>
-    <link rel="shortcut icon" href="img/6214c261839f310023ddb6f3.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/fb.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/icon.css">
+    <style>
+        .svgIcon_1J7 {
+            fill: red;
+        }
+    </style>
 </head>
+
 <body>
-    <header class="header">
-        <div class="header__contacts">
-            <p class="header__address">Los Angeles Gournadi, 1230 Bariasl</p>
-            <a href="mailto:freddy.burgers@email.com" class="header__email">freddy.burgers@email.com</a>
-            <p>Hours: 9:00 AM - 5:00 PM</p>
-        </div>
-        <nav class="header__nav" style="background-color: aquamarine;">
-            <a href="#" class="header__logo-container">
-                <img src="img/Logo1.svg" width="252" class="header__logo" alt="Burger Logo">
-            </a>
-            <div class="header__menu">
-                <a href="#" class="header__menu-item">About us</a>
-                <a href="#" class="header__menu-item">Menu</a>
-                <a href="#" class="header__menu-item">Catering</a>
-                <a href="#" class="header__menu-item">Contacts</a>
-            </div>
-            <div class="header__icons">
-                <a href="#" class="header__icons-item">
-                    <img src ="img/facebook.svg" alt="facebook">
-                </a>
-                <a href="#" class="header__icons-item">
-                    <img src ="img/facebook.svg" alt="facebook">
-                </a>
-                <a href="#" class="header__icons-item">
-                    <img src ="img/facebook.svg" alt="facebook">
-                </a>
-            </div>
-        </nav>
-        <div class="header__banner">
-            <h1 class="header__title">FREDDY BURGERS</h1>
-            <p class="header__slogan">YOU HAVE A PARTY — WE HAVE TASTY BURGERS!</p>
-            <p class="header__text">Look out for our food truck on the streets of Los Angeles, order delivery or catering, and enjoy the taste of juicy burgers!</p>
-            <div class="header__order">
-                <a href="#" class="header__order-button button">Order now</a>
-                <div class="header__call-now">
-                    <img src="img/phone.svg" alt="Phone">
-                    <div class="header__phone">
-                        <h4 class="header__phone-text">Call us</h4>
-                        <a href="tel:+12345678900">+ 1 (234) 567 89 00</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section class="courses">
-            <h2 class="courses__title">
-                Courses
-            </h2>
-            <p class="courses__block-title">
-                Make coffee like a pro
-            </p>
-            <div class="divider">
-
-            </div>
-            <p class="courses__subtitle">
-                Lorem ipsum dolor sit amet consectetur 
-            </p>
-            <div class="courses__carousel carousel">
-                <article class="carousel__slide slide">
-                    <img width="200" src="img/courses-carousel-latte.png" alt="Latte">
-                    <h3 class="">Latte Art Course</h3>
-                    <div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                    </div>
-                    <p>Turn each coffee you make into a masterpiece with our Latte Art Course. You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much more complicated designs.</p>
-                    <a href="#" class="slide__link">Sign up</a>
-                </article>
-                <article class="carousel__slide slide">
-                    <img width="200" src="img/courses-carousel-latte.png" alt="Latte">
-                    <h3 class="">Latte Art Course</h3>
-                    <div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                    </div>
-                    <p>Turn each coffee you make into a masterpiece with our Latte Art Course. You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much more complicated designs.</p>
-                    <a href="#" class="slide__link">Sign up</a>
-                </article>
-                <article class="carousel__slide slide">
-                    <img width="200" src="img/courses-carousel-latte.png" alt="Latte">
-                    <h3 class="">Latte Art Course</h3>
-                    <div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                        <div>
-                            <svg width="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 80" x="0px" y="0px" style="max-width:100%" height="100%"><title style="" fill="currentColor">notetype_glyphs</title><g style="" fill="currentColor"><path d="M61.5,18H54V15.9a2.5,2.5,0,0,0-5,0V18H30V15.9a2.5,2.5,0,0,0-5,0V18H18.3c-2.65,0-5.3,1.45-5.3,4.1V62.9A5.52,5.52,0,0,0,18.3,68H61.5c2.65,0,4.5-2.45,4.5-5.1V22.1C66,19.45,64.15,18,61.5,18ZM18,23h7v2.5a2.5,2.5,0,0,0,5,0V23H49v2.5a2.5,2.5,0,0,0,5,0V23h7v9H18Zm0,40V37H61v-.7L61.5,63Z" style="" fill="currentColor"></path></g></svg>
-                            <span>5 days</span>
-                        </div>
-                    </div>
-                    <p>Turn each coffee you make into a masterpiece with our Latte Art Course. You will learn how to draw beautiful pictures on the foam, from simple leaves and hearts to much more complicated designs.</p>
-                    <a href="#" class="slide__link">Sign up</a>
-                </article>
-            </div>
-        </section>
-        <section class="contacts">
-            <div class="contacts__details">
-
-            </div>
-            <form action="#" method="post" class="contacts__form">
-                <input type="text" name="full-name" placeholder="Enter your fullname*" required>
-                <input type="tel" name="phone" placeholder="Enter your phone number*" required>
-                <input type="email" name="email" placeholder="Enter your email*" required>
-                <textarea name="message" placeholder="Enter your message" cols="30" rows="10"></textarea>
-                <input type="submit" value="Request a Quote">
-            </form>
-        </section>
-    </main>
-    <footer class="footer">
+    <h1>SVG in HTML</h1>
+    <h1>Case 1 - IMG Tag</h1>
+    <img src="img/fb.svg" alt="Facebook Icon">
+    <h1>Case 1 - IMG Tag</h1>
+    <svg>
         
-    </footer>
+    </svg>
 </body>
+
 </html>
